# hri-playground

./: .copier-answers.yml  .gitignore  LICENSE  Makefile  README.md  development.md  pyproject.toml
devtools/: lint.py
docs/: info.txt
models/ppo_humanoid/: vecnormalize_final.pkl  vecnormalize_latest.pkl
runs/tensorboard/PPO_1/: events.out.tfevents.1762600468.MacBookPro.118.0
runs/tensorboard/PPO_2/: events.out.tfevents.1762680678.MacBookPro.7920.0
runs/tensorboard/PPO_3/: events.out.tfevents.1762770874.MacBookPro.4434.0
runs/tensorboard/PPO_4/: events.out.tfevents.1762771621.MacBookPro.9378.0
runs/tensorboard/PPO_5/: events.out.tfevents.1762791684.MacBookPro.14070.0
runs/tensorboard/SAC_1/: events.out.tfevents.1762792786.MacBookPro.16884.0
src/: collect_demonstrations.py  download.py  main.py  play.py  play_humanoid.py  quickstart.py  render_ant.py  render_humanoid.py  train.py
src/interactive_il/: __init__.py  bc_trainer.py  dagger_trainer.py  policy.py  utils.py
tests/: render_humanoid.py  test_bc_trainer.py  test_dagger_trainer.py
wandb/: latest-run
wandb/run-20251108_121426-1hnmtt6t/: run-1hnmtt6t.wandb
wandb/run-20251108_121426-1hnmtt6t/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20251108_121426-1hnmtt6t/files/runs/tensorboard/PPO_1/: events.out.tfevents.1762600468.MacBookPro.118.0
wandb/run-20251109_103117-9uh21od4/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251109_103117-9uh21od4/files/runs/tensorboard/PPO_2/: events.out.tfevents.1762680678.MacBookPro.7920.0
wandb/run-20251110_113433-3yooc5q8/: run-3yooc5q8.wandb
wandb/run-20251110_113433-3yooc5q8/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251110_113433-3yooc5q8/files/runs/tensorboard/PPO_3/: events.out.tfevents.1762770874.MacBookPro.4434.0
wandb/run-20251110_114700-k6zz86m2/: run-k6zz86m2.wandb
wandb/run-20251110_114700-k6zz86m2/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251110_114700-k6zz86m2/files/runs/tensorboard/PPO_4/: events.out.tfevents.1762771621.MacBookPro.9378.0
wandb/run-20251110_172123-zot5k55k/: run-zot5k55k.wandb
wandb/run-20251110_172123-zot5k55k/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251110_172123-zot5k55k/files/runs/tensorboard/PPO_5/: events.out.tfevents.1762791684.MacBookPro.14070.0
wandb/run-20251110_173946-wc6aoryq/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251110_173946-wc6aoryq/files/runs/tensorboard/SAC_1/: events.out.tfevents.1762792786.MacBookPro.16884.0
